@@ -1,3 +1,7 @@
+1994-06-28  dickey@clark.net
+
+	* src/count_files/count_files.c: RCS_BASE
+
 1994-06-24  dickey@clark.net
 
 	* src/newpath/newpath.sh: RCS_BASE
